--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@
 /yarn-error.log
 yarn-debug.log*
 .yarn-integrity
+~/.vscode-root/logs/20201206T133053/exthost1/output_logging_20201206T133106/2-Git.log
